--- a/maml/config.yaml
+++ b/maml/config.yaml
@@ -1,22 +1,29 @@
 ---
- opt_config:
-    train_epochs: 3
-    task_batch_size: 1
-    sample_batch_size: 1
-    lstm_hidden_units: 16
-    init_learning_rate: 1e-3
-    meta_learning_rate: 1e-3
-    T_max: 3
-    eta_min: 1e-5
-    num_inner_steps: 3
-    seed: 42
-    multi_step_loss_num_epochs: 3
-    second_order: True
-    second_to_first_order_epoch: 2
  data_config:
     day_measurements: 96
     week_num: 1
     pred_days: 1
     test_days: 7
-
-   # TODO: change appropriately
+ n_trials: 15
+ ht_config:
+    k_folds: 5
+    seed: 42
+    task_batch_size: 1
+    sample_batch_size: 1
+    num_inner_steps: 3
+    eta_min: 1e-6
+    train_epochs:
+      lower_bound: 10
+      upper_bound: 30
+    lstm_hidden_units:
+      lower_bound: 16
+      upper_bound: 80
+      log: true
+    init_learning_rate:
+      lower_bound: 1e-4
+      upper_bound: 5e-3
+      log: true
+    meta_learning_rate:
+      lower_bound: 1e-5
+      upper_bound: 1e-3
+      log: true
