--- a/maml/config.yaml
+++ b/maml/config.yaml
@@ -4,25 +4,25 @@
     week_num: 1
     pred_days: 1
     test_days: 7
- n_trials: 3
+ n_trials: 15
  seed: 42
  ht_config:
-    k_folds: 3
+    k_folds: 5
     task_batch_size: 1
     sample_batch_size: 1
-    num_inner_steps: 2
+    num_inner_steps: 3
     eta_min: 1e-6
-    second_order: True
+    second_order: False
     second_to_first_order_epoch: 1
     train_epochs:
-      lower_bound: 2
-      upper_bound: 4
+      lower_bound: 10
+      upper_bound: 30
     lstm_hidden_units:
-      lower_bound: 8
-      upper_bound: 16
+      lower_bound: 16
+      upper_bound: 80
     init_learning_rate:
       lower_bound: 1e-4
-      upper_bound: 5e-3
+      upper_bound: 1e-3
       log: true
     meta_learning_rate:
       lower_bound: 1e-5
