--- a/task_embedding/config.yaml
+++ b/task_embedding/config.yaml
@@ -4,19 +4,21 @@
     week_num: 1
     pred_days: 1
     test_days: 7
- n_trials: 15
+ n_trials: 10
  seed: 42
  ht_config:
-    k_folds: 5
-    seed: 42
+    k_folds: 3
     task_batch_size: 1
     sample_batch_size: 1
     train_epochs: 20
+    max_epochs: 1000
+    patience: 3
+    min_delta: 0.0
     learning_rate:
       lower_bound: 1e-5
       upper_bound: 1e-3
       log: true
     embedding_ratio:
       lower_bound: 0.1
-      upper_bound: 0.5
-      step: 0.1
+      upper_bound: 0.2
+      step: 0.02
