--- a/data_aggregation/aggregate_config.yaml
+++ b/data_aggregation/aggregate_config.yaml
@@ -5,10 +5,14 @@
  dest_test_dir: './data/iONA_test_aggregated/'
  train_metadata_dir: './data/train_segments_metadata/'
  test_metadata_dir: './data/test_segments_metadata/'
- train_min_length: 5
- train_max_length: 16
- test_min_length: 2
+ train_min_length: 2
+ train_max_length: 7
+ train_mean_length: 4
+ train_std: 2
+ test_min_length: 1
  test_max_length: 4
+ test_mean_length: 2
+ test_std: 1
  num_timeseries: 50
  train_size: 40
  test_size: 10
