--- a/maml/config.yaml
+++ b/maml/config.yaml
@@ -4,7 +4,8 @@
     week_num: 1
     pred_days: 1
     test_days: 7
- n_trials: 15
+    epsilon: 0.1
+ n_trials: 10
  seed: 42
  ht_config:
     k_folds: 3
@@ -12,8 +13,12 @@
     sample_batch_size: 1
     num_inner_steps: 3
     eta_min: 1e-6
-    second_order: True
+    second_order: False
     second_to_first_order_epoch: 8
+    loss: 'MSE'
+    kappa:
+      lower_bound: 1.5
+      upper_bound: 5.0
     train_epochs:
       lower_bound: 10
       upper_bound: 30
