--- a/task_specific_lstm/config.yaml
+++ b/task_specific_lstm/config.yaml
@@ -14,6 +14,7 @@
     scheduler_patience: 2
     scheduler_threshold: 1e-2
     loss: 'MSE'
+    lstm_hidden_units: 32
     kappa:
       lower_bound: 1.5
       upper_bound: 5.0
@@ -22,9 +23,5 @@
       upper_bound: 5e-2
       log: true
     epochs:
-      lower_bound: 5
-      upper_bound: 30
-    lstm_hidden_units:
-      lower_bound: 8
-      upper_bound: 64
-      log: true
+      lower_bound: 10
+      upper_bound: 40
