--- a/task_invariant_lstm/config.yaml
+++ b/task_invariant_lstm/config.yaml
@@ -12,6 +12,8 @@
     task_batch_size: 1
     sample_batch_size: 1
     loss: 'MSE'
+    lstm_hidden_units: 32
+    finetune_epochs: 5
     kappa:
       lower_bound: 1.5
       upper_bound: 5.0
@@ -22,10 +24,3 @@
     train_epochs:
       lower_bound: 10
       upper_bound: 40
-    finetune_epochs:
-      lower_bound: 5
-      upper_bound: 15
-    lstm_hidden_units:
-      lower_bound: 16
-      upper_bound: 80
-      log: true
