--- a/task_specific_lstm/config.yaml
+++ b/task_specific_lstm/config.yaml
@@ -4,10 +4,9 @@
     week_num: 1
     pred_days: 1
     test_days: 7
-    epsilon: 0.1
  n_trials: 10
  ht_config:
-    k_folds: 3
+    k_folds: 2
     batch_size: 1
     seed: 42
     scheduler_factor: 0.1
@@ -15,13 +14,9 @@
     scheduler_threshold: 1e-2
     loss: 'MSE'
     lstm_hidden_units: 32
-    kappa:
-      lower_bound: 1.5
-      upper_bound: 5.0
+    linear_layers: 2
+    epochs: 5
     learning_rate:
       lower_bound: 5e-4
       upper_bound: 5e-2
       log: true
-    epochs:
-      lower_bound: 10
-      upper_bound: 40
